# project

./: Cargo.toml  README.md  package-lock.json  package.json
back/: Cargo.toml  config.yml
back/src/: configuration.rs  lib.rs  main.rs
back/src/api/: dummy_api.rs  error.rs  membership.rs  mod.rs
front/: package-lock.json  package.json  tailwind.config.js
front/src/: App.tsx  index.tsx
front/src/components/: auth.tsx
front/src/pages/: Dummy.tsx  Root.tsx  Signin.tsx  Signup.tsx
